added citations to foundations notebook 2

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -155,3 +155,43 @@ note = {e2023MS003729 2023MS003729},
 abstract = {Abstract A reference or “no-feedback” radiative response to warming is fundamental to understanding how much global warming will occur for a given change in greenhouse gases or solar radiation incident on the Earth. The simplest estimate of this radiative response is given by the Stefan-Boltzmann law as  W m−2 K−1 for Earth's present climate, where is a global effective emission temperature. The comparable radiative response in climate models, widely called the “Planck feedback,” averages −3.3 W m−2 K−1. This difference of 0.5 W m−2 K−1 is large compared to the uncertainty in the net climate feedback, yet it has not been studied carefully. We use radiative transfer models to analyze these two radiative feedbacks to warming, and find that the difference arises primarily from the lack of stratospheric warming assumed in calculations of the Planck feedback (traditionally justified by differing constraints on and time scales of stratospheric adjustment relative to surface and tropospheric warming). The Planck feedback is thus masked for wavelengths with non-negligible stratospheric opacity, and this effect implicitly acts to amplify warming in current feedback analysis of climate change. Other differences between Planck and Stefan-Boltzmann feedbacks arise from temperature-dependent gas opacities, and several artifacts of nonlinear averaging across wavelengths, heights, and different locations; these effects partly cancel but as a whole slightly destabilize the Planck feedback. Our results point to an important role played by stratospheric opacity in Earth's climate sensitivity, and clarify a long-overlooked but notable gap in our understanding of Earth's reference radiative response to warming.},
 year = {2023}
 }
+
+@article {soden:2006a,
+      author = "Brian J. Soden and Isaac M. Held",
+      title = "An Assessment of Climate Feedbacks in Coupled Ocean–Atmosphere Models",
+      journal = "Journal of Climate",
+      year = "2006",
+      publisher = "American Meteorological Society",
+      address = "Boston MA, USA",
+      volume = "19",
+      number = "14",
+      doi = "10.1175/JCLI3799.1",
+      pages=      "3354 - 3360",
+}
+
+@article {soden:2008a,
+      author = "Brian J. Soden and Isaac M. Held and Robert Colman and Karen M. Shell and Jeffrey T. Kiehl and Christine A. Shields",
+      title = "Quantifying Climate Feedbacks Using Radiative Kernels",
+      journal = "Journal of Climate",
+      year = "2008",
+      publisher = "American Meteorological Society",
+      address = "Boston MA, USA",
+      volume = "21",
+      number = "14",
+      doi = "10.1175/2007JCLI2110.1",
+      pages=      "3504 - 3520",
+}
+
+@article {held:2012a,
+      author = "Isaac M. Held and Karen M. Shell",
+      title = "Using Relative Humidity as a State Variable in Climate Feedback Analysis",
+      journal = "Journal of Climate",
+      year = "2012",
+      publisher = "American Meteorological Society",
+      address = "Boston MA, USA",
+      volume = "25",
+      number = "8",
+      doi = "10.1175/JCLI-D-11-00721.1",
+      pages=      "2578 - 2582",
+      url = "https://journals.ametsoc.org/view/journals/clim/25/8/jcli-d-11-00721.1.xml"
+}
