cleaned up notebook for foundation1

--- a/notebooks/foundations/energy-balance-model.ipynb
+++ b/notebooks/foundations/energy-balance-model.ipynb
@@ -46,7 +46,7 @@
     "| TBD | Necessary | |\n",
     "\n",
     "\n",
-    "- **Time to learn**: 30 minutes?"
+    "- **Time to learn**: >30 minutes"
    ]
   },
   {
@@ -60,19 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Imports\n",
-    "We will import commonly used scientific Python packages for this notebook."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np \n",
-    "import xarray as xr \n",
-    "import matplotlib.pyplot as plt "
+    "## Radiative Budget Analysis"
    ]
   },
   {
@@ -160,7 +148,7 @@
     "\n",
     "Note that feedback is different from the radiative response, where the former has the unit of $Wm^{-2} K^{-1}$ and is quantified by the feedback parameter $\\lambda$, while the latter  has the unit of $Wm^{-2}$, quantified by $\\lambda T$. \n",
     "\n",
-    "Let x be a vector representing an ensemble of climate variables like atmospheric temperature, water vapor, surface ice and snow. The formal definition of the system's total feedback parameter, which is the strength of the climate system's net feedback, is as follow ([Bony et al. 2006](https://doi.org/10.1175/JCLI3819.1)): \n",
+    "Let $x$ be a vector representing an ensemble of climate variables like atmospheric temperature, water vapor, surface ice and snow. The formal definition of the system's total feedback parameter, which is the strength of the climate system's net feedback, is as follow ([Bony et al. 2006](https://doi.org/10.1175/JCLI3819.1)): \n",
     "\n",
     "\\begin{equation*}\n",
     "\\lambda = \\frac{\\partial R}{\\partial T_{s}} = \\sum^{x} \\frac{\\partial R}{\\partial x} \\frac{\\partial x}{\\partial T_{s}} + \\sum \\sum \\frac{\\partial ^{2}R}{\\partial x \\partial y} \\frac{\\partial x \\partial y}{\\partial T_{s}^{2}} + ...\n",
@@ -216,9 +204,11 @@
     "\n",
     "If we include the planetary emissivity $\\epsilon$, we will get $\\lambda_{Planck} \\approx -3.3Wm^{-2}K^{-1}$, which is close to observations (Dessler, 2013) and global climate models (Caldwell et al. 2016). \n",
     "\n",
-    "Simply put, the more you heat, the more LW radiation go out.\n",
+    "**Simply put, the more you heat, the more LW radiation go out.**\n",
+    "\n",
+    "\n",
     "[TO BE POLISHED]\n",
-    "*Kernel related: structural uncertainty in Planck feedback arises from differences in spatial pattern of surface warming and climatological distribution fo clodus and water vapor that determines planetary emissivity - affects radiative temperature kernel (Sherwood et al 2020). \n",
+    "*Kernel related: structural uncertainty in Planck feedback arises from differences in spatial pattern of surface warming and climatological distribution fo clouds and water vapor that determines planetary emissivity - affects radiative temperature kernel (Sherwood et al 2020). \n",
     "\n",
     "Types of radiative kernels there are: sfc albedo, air temp (vert.varying) , surf temp, LW water vapor kernel, SW water vapor kernel"
    ]
@@ -284,62 +274,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Cloud Feedback "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Methods to Calculate Raditaive Feedback "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Typically radiative feedback are calculated with global climate models. :O\n",
-    "- PRP method\n",
-    "\n",
-    "\n",
-    "Workin on it >:) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"admonition alert alert-success\">\n",
-    "    <p class=\"admonition-title\" style=\"font-weight:bold\">Success</p>\n",
-    "    We got this done after all!\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"admonition alert alert-warning\">\n",
-    "    <p class=\"admonition-title\" style=\"font-weight:bold\">Warning</p>\n",
-    "    Be careful!\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"admonition alert alert-danger\">\n",
-    "    <p class=\"admonition-title\" style=\"font-weight:bold\">Danger</p>\n",
-    "    Scary stuff be here.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We also suggest checking out Jupyter Book's [brief demonstration](https://jupyterbook.org/content/metadata.html#jupyter-cell-tags) on adding cell tags to your cells in Jupyter Notebook, Lab, or manually. Using these cell tags can allow you to [customize](https://jupyterbook.org/interactive/hiding.html) how your code content is displayed and even [demonstrate errors](https://jupyterbook.org/content/execute.html#dealing-with-code-that-raises-errors) without altogether crashing our loyal army of machines!"
+    "### 5. Cloud Feedback "
    ]
   },
   {
