Finish temperature and Planck

--- a/notebooks/feedback-analysis/manual-calc.ipynb
+++ b/notebooks/feedback-analysis/manual-calc.ipynb
@@ -653,7 +653,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Taking the global and annual average, we get a final value of ~0.35 W m$^{-2}$ K$^{-1}$:"
+    "Taking the global and annual average, we get a final value of about $0.35$ W m$^{-2}$ K$^{-1}$:"
    ]
   },
   {
@@ -671,7 +671,7 @@
    "source": [
     "### Temperature\n",
     "\n",
-    "The temperature feedback is decomposed into Planck and lapse rate feedbacks, but first, we calculate the change in TOA LW radiation resulting from changes in surface (`ts`) and air (`ta`) temperature. The first step is calculating the changes in surface and air temperature:"
+    "The temperature feedback is decomposed into Planck and lapse rate feedbacks, but first, we can calculate the change in TOA LW radiation resulting from changes in surface (`ts`) and air (`ta`) temperature. The first step is calculating the changes in surface and air temperature:"
    ]
   },
   {
@@ -691,7 +691,10 @@
     "Then the change in TOA radiation using the kernels:\n",
     "\n",
     "$$\\Delta R_{T_\\mathrm{s}}=K_{T_\\mathrm{s}}\\cdot\\Delta T_\\mathrm{s}$$\n",
-    "$$\\Delta R_T=K_T\\cdot\\Delta T$$"
+    "\n",
+    "And for feedbacks that involve functions of pressure, we sum over the pressure levels:\n",
+    "\n",
+    "$$\\Delta R_T=\\sum_p K_T(p)\\cdot\\Delta T(p)$$"
    ]
   },
   {
@@ -700,7 +703,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dLW_ts = regr_kernels.lw_ts *"
+    "dLW_ts = regr_kernels.lw_ts * dts\n",
+    "dLW_ts_clr = regr_kernels.lwclr_ts * dts\n",
+    "\n",
+    "dLW_ta = (regr_kernels.lw_t * tropo_mask(dta)).sum(dim='plev', skipna=True)\n",
+    "dLW_ta_clr = (regr_kernels.lwclr_t * tropo_mask(dta)).sum(dim='plev', skipna=True)"
    ]
   },
   {
@@ -708,20 +715,148 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dLW_ts.mean(dim='month').plot()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dLW_ta.mean(dim='month').plot()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Planck"
+    "The full temperature feedback is the sum of these, normalized by the change in GMST:\n",
+    "\n",
+    "$$\\lambda_T=\\frac{\\Delta R_{T_\\mathrm{s}}+\\Delta R_T}{\\Delta T_\\mathrm{s}}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_feedback = (dLW_ta + dLW_ts)/dgmst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_feedback.mean(dim='month').plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the annual and global average, we get about $-4.3$ W m$^{-2}$ K$^{-1}$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "global_average(t_feedback.mean(dim='month')).load()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Planck\n",
+    "\n",
+    "There are two components to the Planck feedback:\n",
+    "1. The change in TOA radiation due to the surface warming (calculated in the previous section)\n",
+    "2. The change in TOA radiation due to a vertically-uniform warming\n",
+    "\n",
+    "We assume a vertically-uniform warming based on the surface temperature. To do this, project the surface warming into the vertical. One way to do this with Xarray is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dts_3d = dts.expand_dims(dim={'plev': dta.plev})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check the vertical profile:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dts_3d.mean(dim=['month', 'lon']).plot(yincrease=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dLW_dts_3d = (regr_kernels.lw_t * tropo_mask(dts_3d)).sum(dim='plev', skipna=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The sum of the two components divided by the change in GMST is the Planck feedback:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planck_feedback = (dLW_ts + dLW_dts_3d)/dgmst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "planck_feedback.mean(dim='month').plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Annual and global average: $-3.6$ W m$^{-2}$ K$^{-1}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "global_average(planck_feedback.mean(dim='month')).load()"
    ]
   },
   {
@@ -819,26 +954,23 @@
    "metadata": {},
    "source": [
     "## Summary\n",
-    "Add one final `---` marking the end of your body of content, and then conclude with a brief single paragraph summarizing at a high level the key pieces that were learned and how they tied to your objectives. Look to reiterate what the most important takeaways were.\n",
     "\n",
-    "### What's next?\n",
-    "Let Jupyter book tie this to the next (sequential) piece of content that people could move on to down below and in the sidebar. However, if this page uniquely enables your reader to tackle other nonsequential concepts throughout this book, or even external content, link to it here!"
+    "### What's next?\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Resources and references\n",
-    "Finally, be rigorous in your citations and references as necessary. Give credit where credit is due. Also, feel free to link to relevant external material, further reading, documentation, etc. Then you're done! Give yourself a quick review, a high five, and send us a pull request. A few final notes:\n",
-    " - `Kernel > Restart Kernel and Run All Cells...` to confirm that your notebook will cleanly run from start to finish\n",
-    " - `Kernel > Restart Kernel and Clear All Outputs...` before committing your notebook, our machines will do the heavy lifting\n",
-    " - Take credit! Provide author contact information if you'd like; if so, consider adding information here at the bottom of your notebook\n",
-    " - Give credit! Attribute appropriate authorship for referenced code, information, images, etc.\n",
-    " - Only include what you're legally allowed: **no copyright infringement or plagiarism**\n",
-    " \n",
-    "Thank you for your contribution!"
+    "## Resources and references"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
